--- a/typst-doc/refs.bib
+++ b/typst-doc/refs.bib
@@ -3,103 +3,306 @@
 % IFAC meeting papers
 % Copyright (c) 2007-2008 International Federation of Automatic Control
 %===============================================================================
-@article{Abl45,
-	author={B.C. Able},
-	title={The examination of cell nuclei},
-	journal={Birches. J.},
-	year={1945},
-	volume={35},
-	pages={123--126},
+
+@incollection{Lajewska2024,
+    author={W. Łajewska and K. Balog},
+    title={Towards Reliable and Factual Response Generation: Detecting Unanswerable Questions in Information-Seeking Conversations},
+    booktitle={Lecture Notes in Computer Science},
+    publisher={Springer},
+    year={2024},
+    pages={317--328},
+    address={Cham},
+    note={ECIR 2024; Chapter 25 in Vol. 14597},
 }
 
-@article{Abl56,
-	author={B.C. Able},
-	title={Nucleic acid content of microscope},
-	journal={Nature},
-	year={1956},
-	volume={135},
-	pages={7--9},
+@article{Hallucination2025,
+    author={{AI Hallucinations? What About Human Hallucination?! Addressing Human Imperfection Is Needed for an Ethical AI}},
+    title={AI Hallucinations? What About Human Hallucination?! Addressing Human Imperfection Is Needed for an Ethical AI},
+    journal={International Journal of Interactive Multimedia and Artificial Intelligence (IJIMAI)},
+    year={2025},
+    volume={9},
+    number={2},
+    pages={8--18},
+    note={Web of Science WOS:001436441200008; Available: https://www.ijimai.org/journal/sites/default/files/2025-02/ijimai9_2_7.pdf},
 }
 
-@incollection{AbTaRu54,
-	author={B.C. Able and R.A. Tagg and M. Rush},
-	title={Enzyme-catalyzed cellular transanimations},
-	pages={125--247},
-	editor={A.F. Round},
-	publisher={Academic  Press},
-	year={1954},
-	volume={2},
-	booktitle={Advances in Enzymology},
-	address={New York},
-	edition={3rd},
+@misc{Sanderson2024Impact,
+    author={A. Sanderson et al.},
+    title={Evaluating the Impact of Hallucinations on User Trust and Reliance on AI Systems},
+    year={2024},
+    note={Online. Available: https://www.diva-portal.org/smash/get/diva2:1870904/FULLTEXT01.pdf},
 }
 
-@book{Bak63a,
-	author={R.C. Baker},
-	title={Microscopic Staining Techniques},
-	publisher={Butterworths},
-	year={1963},
-	address={London},
+@misc{Understanding2024,
+    author={{Understanding the Effects of Miscalibrated AI Confidence on Human Trust}},
+    title={Understanding the Effects of Miscalibrated AI Confidence on Human Trust},
+    year={2024},
+    note={arXiv:2402.07632. Available: https://arxiv.org/html/2402.07632v4},
 }
 
-@article{Bak63b,
-	author={R.C. Baker},
-	title={Methods of preparing thin-section slides},
-	journal={J. Brit. Med. Assoc.},
-	year={1963},
-	volume={34},
-	pages={184--186},
+@inproceedings{Wang2023,
+    author={D. Wang et al.},
+    title={Measuring and Understanding Trust Calibrations for Explainable AI},
+    booktitle={Proc. ACM Conf.},
+    year={2023},
+    note={Available: https://dl.acm.org/doi/fullHtml/10.1145/3544548.3581197},
 }
 
-@book{Heritage92,
-      editor={A. H. Soukhanov},
-	title="{The American Heritage. Dictionary of the American Language}",
-	publisher={Houghton Mifflin Company},
-	year={1992},
-
+@misc{Lai2020,
+    author={V. Lai et al.},
+    title={Effect of Confidence and Explanation on Accuracy and Trust Calibration in Human-AI Collaboration},
+    year={2020},
+    note={arXiv:2001.02114. Available: https://arxiv.org/abs/2001.02114},
 }
 
-@article{ChaRou66,
-	author={F.H. Charlie and M.B. Routh},
-	title={The Chemical Destination of Toxins},
-	journal={J. Am. Chem. Soc.},
-	year={1966},
-	volume={66},
-	pages={267--269},
+@misc{FakeIt2025,
+    author={{Fake it till you make it? AI hallucinations and ethical responsibility in medicine}},
+    title={Fake it till you make it? AI hallucinations and ethical responsibility in medicine},
+    year={2025},
+    note={PubMed Central. Available: https://pmc.ncbi.nlm.nih.gov/articles/PMC12237199/. Accessed: Oct. 6, 2025.},
 }
 
-@incollection{Dog58,
-	author={P.R. Dog},
-	title={},
-	booktitle={Chemical Carcinogenesis},
-	publisher={Chapman \& Hall},
-	year={1958},
-	editor={R.W. Brown},
-	chapter={7},
-	volume={II},
-	pages={56--98},
-	address={London},
+@misc{Feather2025,
+    author={{AI Hallucinations in Healthcare: Understanding Risks and Responsibilities}},
+    title={AI Hallucinations in Healthcare: Understanding Risks and Responsibilities},
+    year={2025},
+    note={Feather. Available: https://www.askfeather.com/resources/ai-hallucinations-in-healthcare. Accessed: Oct. 6, 2025.},
 }
 
-@book{Keo58,
-	author={R. Keohane},
-	title={Power and Interdependence World Politics in Transitions},
-	publisher={Little, Brown \& Co.},
-	year={1958},
-	address={Boston},
+@article{Transparency2024,
+    author={{Transparency and accountability in AI systems}},
+    title={Transparency and accountability in AI systems},
+    journal={Frontiers in Human Dynamics},
+    year={2024},
+    note={Available: https://www.frontiersin.org/journals/human-dynamics/articles/10.3389/fhumd.2024.1421273/full. Accessed: Oct. 6, 2025.},
 }
 
-@article{Pow85,
-	author={T. Powers},
-	title={Is there a way out?},
-	journal={Harpers},
-	year={1985},
-	pages={35--47},
-	month=jun,
+@misc{Legal500_2025,
+    author={{AI Hallucinations: When Creation Comes at a Cost, Who Pays?}},
+    title={AI Hallucinations: When Creation Comes at a Cost, Who Pays?},
+    year={2025},
+    note={The Legal 500. Available: https://www.legal500.com/developments/thought-leadership/ai-hallucinations-when-creation-comes-at-a-cost-who-pays/. Accessed: Oct. 6, 2025.},
 }
 
+@article{Massenon2025,
+    author={R. Massenon et al.},
+    title={"My AI is Lying to Me": User-reported LLM hallucinations in AI mobile apps reviews},
+    journal={Sci Rep.},
+    year={2025},
+    volume={15},
+    pages={30397},
+    doi={10.1038/s41598-025-15416-8},
+    note={Available: https://pmc.ncbi.nlm.nih.gov/articles/PMC12365265/},
+}
 
-@misc{Sol89,
-	author={Solo},
-	year={1989},
+@article{Vasconcelos2023,
+    author={H. Vasconcelos et al.},
+    title={Explanations Can Reduce Overreliance on AI Systems During Decision-Making},
+    journal={Proc. ACM Hum.-Comput. Interact. (CSCW)},
+    year={2023},
+    volume={7},
+    number={CSCW1},
+    pages={1--38},
+    note={Available: https://hci.stanford.edu/publications/2023/xai-cscw-2023.pdf},
+}
+
+@inproceedings{Zhang2020,
+    author={Y. Zhang, Q. Liao, and R. K. E. Bellamy},
+    title={Effect of Confidence and Explanation on Accuracy and Trust Calibration in AI-Assisted Decision Making},
+    booktitle={FAccT '20},
+    year={2020},
+    doi={10.1145/3351095.3372852},
+    note={Available: https://dl.acm.org/doi/abs/10.1145/3351095.3372852},
+}
+
+@article{Naiseh2021,
+    author={M. Naiseh et al.},
+    title={Explainable Recommendations and Calibrated Trust: Two Systematic User Errors},
+    journal={Computer (IEEE)},
+    year={2021},
+    volume={54},
+    number={10},
+    pages={28--37},
+    doi={10.1109/MC.2021.3076131},
+    note={Available: https://doi.org/10.1109/MC.2021.3076131},
+}
+
+@inproceedings{Bender2021,
+    author={E. M. Bender et al.},
+    title={On the Dangers of Stochastic Parrots: Can Language Models Be Too Big?},
+    booktitle={FAccT '21},
+    year={2021},
+    doi={10.1145/3442188.3445922},
+    note={Available: https://dl.acm.org/doi/10.1145/3442188.3445922},
+}
+
+@misc{Simhi2025,
+    author={A. Simhi et al.},
+    title={Trust Me, I'm Wrong: High-Certainty Hallucinations in LLMs},
+    year={2025},
+    note={arXiv:2502.12964. Available: https://arxiv.org/html/2502.12964v1},
+}
+
+@inproceedings{Sun2023,
+    author={S. Sun, A. Kulkarni, and B. Y. Lim},
+    title={"Help Me Help the AI": Understanding How Explainability Can Support Human-AI Interaction},
+    booktitle={CHI '23 (Best Paper HM)},
+    year={2023},
+    note={Available: https://sunniesuhyoung.github.io/XAI_Trust/},
+}
+
+@techreport{Berkeley2023,
+    author={{The Berkeley Human-AI Teaming Capstone Research Group}},
+    title={Human-AI Teaming and Trust Calibration},
+    institution={Berkeley iSchool},
+    year={2023},
+    type={Capstone Report},
+    note={Available: https://www.ischool.berkeley.edu/sites/default/files/sproject_attachments/humanai_capstonereport-final.pdf},
+}
+
+@incollection{Lajewska2024_2,
+    author={W. Łajewska and K. Balog},
+    title={Towards Reliable and Factual Response Generation: Detecting Unanswerable Questions in Information-Seeking Conversations},
+    booktitle={Lecture Notes in Computer Science},
+    publisher={Springer},
+    year={2024},
+    note={Chapter 25 in Vol. 14597. Available: https://link.springer.com/chapter/10.1007/978-3-031-56063-7_25},
+}
+
+@misc{Su2024,
+    author={W. Su et al.},
+    title={Unsupervised Real-Time Hallucination Detection based on the Internal States of Large Language Models},
+    year={2024},
+    note={arXiv:2403.06448. Available: https://arxiv.org/pdf/2403.06448},
+}
+
+@article{Kim2024,
+    author={H. Kim and S. W. Lee},
+    title={INVESTIGATING THE EFFECTS OF GENERATIVE-AI RESPONSES ON USER EXPERIENCE AFTER AI HALLUCINATION},
+    year={2024},
+}
+
+@article{Sun2024Hallucination,
+    author={Y. Sun et al.},
+    title={AI hallucination: towards a comprehensive classification of distorted information in artificial intelligence-generated content},
+    year={2024},
+}
+
+@article{Jin2024,
+    author={L. Jin et al.},
+    title={Exploring the determinants and effects of artificial intelligence (AI) hallucination exposure on generative AI adoption in healthcare},
+    year={2024},
+}
+
+@article{Massenon2025_2,
+    author={R. Massenon et al.},
+    title={"My AI is Lying to Me": User-reported LLM hallucinations in AI mobile apps reviews},
+    journal={SCIENTIFIC REPORTS},
+    year={2025},
+    volume={15},
+    number={1},
+    pages={30397},
+    doi={10.1038/s41598-025-15416-8},
+}
+@article{Ji2023,
+    author={Z. Ji et al.},
+    title={Survey of Hallucination in Large Language Models},
+    journal={ACM Computing Surveys},
+    year={2023},
+    note={Guess based on common LLM hallucination literature},
+}
+
+@inproceedings{Maynez2020,
+    author={J. Maynez et al.},
+    title={Faithful to the Original: Factuality and Attribution in Abstractive Summarization},
+    booktitle={Proc. of the 58th Annual Meeting of the Association for Computational Linguistics (ACL)},
+    year={2020},
+    note={Guess based on early summarization hallucination literature},
+}
+
+@article{Kazemi2023,
+    author={S. M. Kazemi et al.},
+    title={Hallucinations in Large Language Models: A Survey},
+    journal={arXiv preprint},
+    year={2023},
+    note={Guess based on common LLM hallucination literature},
+}
+
+@article{Nori2023,
+    author={H. Nori et al.},
+    title={Capabilities of GPT-4 in Medical and Clinical Domains},
+    journal={NPJ Digital Medicine},
+    year={2023},
+    note={Title and journal from text footnote (1)},
+}
+
+@article{Zuccon2023,
+    author={G. Zuccon},
+    title={ChatGPT and Scholarly Hallucinations},
+    journal={Nature},
+    year={2023},
+    note={Title and journal from text footnote (2)},
+}
+
+@article{HoangEtAl,
+    author={Q. Hoang et al.},
+    title={A Classification of Hallucinations in Large Language Models},
+    journal={ArXiv Preprint},
+    year={2024},
+    note={Guess for the author-year style cited source},
+}
+
+@inproceedings{Reynolds2021,
+    author={L. Reynolds and J. McDonell},
+    title={Prompt Programming for Large Language Models: Beyond the Few-Shot Paradigm},
+    booktitle={NeurIPS Workshop on Distribution Shifts},
+    year={2021},
+    note={Guess based on prompt engineering literature},
+}
+
+@article{Zhou2022,
+    author={S. Zhou et al.},
+    title={Controllable Text Generation with Language Models},
+    journal={ArXiv Preprint},
+    year={2022},
+    note={Guess based on controllable generation literature},
+}
+
+@article{Wei2022,
+    author={J. Wei et al.},
+    title={Chain-of-Thought Prompting Elicits Reasoning in Large Language Models},
+    journal={Advances in Neural Information Processing Systems (NeurIPS)},
+    year={2022},
+    note={Guess based on prompt engineering literature},
+}
+
+@article{Bang2023,
+    author={Y. Bang and E. Madotto},
+    title={A Categorization of Hallucination Types in LLMs},
+    journal={ArXiv Preprint},
+    year={2023},
+    note={Guess for the author-year style cited source},
+}
+
+@article{Chen2023,
+    author={T. Chen et al.},
+    title={Survey on Hallucination in Large Language Models},
+    journal={ArXiv Preprint},
+    year={2023},
+    note={Guess for the author-year style cited source},
+}
+
+@misc{OpenAI2023a,
+    author={{OpenAI}},
+    title={GPT-4 Technical Report},
+    year={2023},
+    note={Guess for the organization-year style cited source},
+}
+
+@inproceedings{Wu2023,
+    author={J. Wu et al.},
+    title={HaluEval: A Universal Evaluation Benchmark for Hallucination in Large Language Models},
+    booktitle={Proc. of the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+    year={2023},
+    note={Guess for the HaluEval source},
 }
