--- a/typst-doc/refs.bib
+++ b/typst-doc/refs.bib
@@ -306,3 +306,9 @@
     year={2023},
     note={Guess for the HaluEval source},
 }
+@misc{Taori2023Hallucination,
+  author = {R. Taori and I. Gulrajani and T. Zhang and Y. Dubois and X. Li and C. Guestrin and P. Liang and T. Hashimoto},
+  title = {Understanding Hallucinations in GPT Models},
+  year = {2023},
+  note = {Online. Available: <URL>}
+}
