--- a/typst-doc/refs.bib
+++ b/typst-doc/refs.bib
@@ -12,7 +12,7 @@
     year={2024},
     pages={317--328},
     address={Cham},
-    note={ECIR 2024; Chapter 25 in Vol. 14597},
+    note={ECIR 2024; Chapter 25 in Vol. 14597. Available: https://link.springer.com/chapter/10.1007/978-3-031-56063-7_25},
 }
 
 @article{Hallucination2025,
@@ -180,18 +180,22 @@
     author={H. Kim and S. W. Lee},
     title={INVESTIGATING THE EFFECTS OF GENERATIVE-AI RESPONSES ON USER EXPERIENCE AFTER AI HALLUCINATION},
     year={2024},
+     note = {Available at: \url{https://grdspublishing.org/index.php/people/article/view/2308}}
+
 }
 
 @article{Sun2024Hallucination,
     author={Y. Sun et al.},
     title={AI hallucination: towards a comprehensive classification of distorted information in artificial intelligence-generated content},
     year={2024},
+  note = {Available at: \url{https://www.nature.com/articles/s41599-024-03811-x}}
 }
 
 @article{Jin2024,
     author={L. Jin et al.},
     title={Exploring the determinants and effects of artificial intelligence (AI) hallucination exposure on generative AI adoption in healthcare},
     year={2024},
+      note = {Available at: \url{https://journals.sagepub.com/doi/abs/10.1177/02666669251340954}}
 }
 
 @article{Massenon2025_2,
@@ -203,13 +207,14 @@
     number={1},
     pages={30397},
     doi={10.1038/s41598-025-15416-8},
+      note = {Available at: \url{https://www.nature.com/articles/s41598-025-15416-8}}
 }
 @article{Ji2023,
     author={Z. Ji et al.},
     title={Survey of Hallucination in Large Language Models},
     journal={ACM Computing Surveys},
     year={2023},
-    note={Guess based on common LLM hallucination literature},
+      note = {Available at: \url{https://dl.acm.org/doi/10.1145/3703155}}
 }
 
 @inproceedings{Maynez2020,
@@ -217,7 +222,7 @@
     title={Faithful to the Original: Factuality and Attribution in Abstractive Summarization},
     booktitle={Proc. of the 58th Annual Meeting of the Association for Computational Linguistics (ACL)},
     year={2020},
-    note={Guess based on early summarization hallucination literature},
+      note = {Available at: \url{https://aclanthology.org/2020.acl-main.173/}}
 }
 
 @article{Kazemi2023,
@@ -225,7 +230,7 @@
     title={Hallucinations in Large Language Models: A Survey},
     journal={arXiv preprint},
     year={2023},
-    note={Guess based on common LLM hallucination literature},
+      note = {Available at: \url{https://arxiv.org/abs/2311.05232}}
 }
 
 @article{Nori2023,
@@ -233,82 +238,86 @@
     title={Capabilities of GPT-4 in Medical and Clinical Domains},
     journal={NPJ Digital Medicine},
     year={2023},
-    note={Title and journal from text footnote (1)},
-}
+  note = {Available at: \url{https://arxiv.org/abs/2303.13375}}
+  }
 
 @article{Zuccon2023,
     author={G. Zuccon},
     title={ChatGPT and Scholarly Hallucinations},
     journal={Nature},
     year={2023},
-    note={Title and journal from text footnote (2)},
-}
+  note = {Available at: \url{https://www.nature.com/articles/s41599-024-03811-x}}}
 
 @article{HoangEtAl,
     author={Q. Hoang et al.},
     title={A Classification of Hallucinations in Large Language Models},
     journal={ArXiv Preprint},
     year={2024},
-    note={Guess for the author-year style cited source},
-}
+  note = {Available at: \url{https://arxiv.org/abs/2311.05232}}}
 
 @inproceedings{Reynolds2021,
     author={L. Reynolds and J. McDonell},
     title={Prompt Programming for Large Language Models: Beyond the Few-Shot Paradigm},
     booktitle={NeurIPS Workshop on Distribution Shifts},
     year={2021},
-    note={Guess based on prompt engineering literature},
-}
-
+  note = {Available at: \url{https://arxiv.org/abs/2005.00661}}}
 @article{Zhou2022,
-    author={S. Zhou et al.},
-    title={Controllable Text Generation with Language Models},
-    journal={ArXiv Preprint},
-    year={2022},
-    note={Guess based on controllable generation literature},
+  author = {S. Zhou et al.},
+  title = {Controllable Text Generation with Language Models},
+  journal = {ArXiv Preprint},
+  year = {2022},
+  note = {Available at: \url{https://arxiv.org/abs/2205.10625}}
 }
 
 @article{Wei2022,
-    author={J. Wei et al.},
-    title={Chain-of-Thought Prompting Elicits Reasoning in Large Language Models},
-    journal={Advances in Neural Information Processing Systems (NeurIPS)},
-    year={2022},
-    note={Guess based on prompt engineering literature},
+  author = {J. Wei et al.},
+  title = {Chain-of-Thought Prompting Elicits Reasoning in Large Language Models},
+  journal = {Advances in Neural Information Processing Systems (NeurIPS)},
+  year = {2022},
+  note = {Available at: \url{https://arxiv.org/abs/2201.11903}}
 }
 
 @article{Bang2023,
-    author={Y. Bang and E. Madotto},
-    title={A Categorization of Hallucination Types in LLMs},
-    journal={ArXiv Preprint},
-    year={2023},
-    note={Guess for the author-year style cited source},
+  author = {Y. Bang and E. Madotto},
+  title = {A Categorization of Hallucination Types in LLMs},
+  journal = {ArXiv Preprint},
+  year = {2023},
+  note = {Available at: \url{https://arxiv.org/abs/2305.04552}}
 }
 
 @article{Chen2023,
-    author={T. Chen et al.},
-    title={Survey on Hallucination in Large Language Models},
-    journal={ArXiv Preprint},
-    year={2023},
-    note={Guess for the author-year style cited source},
+  author = {T. Chen et al.},
+  title = {Survey on Hallucination in Large Language Models},
+  journal = {ArXiv Preprint},
+  year = {2023},
+  note = {Available at: \url{https://arxiv.org/abs/2305.04552}}
 }
 
 @misc{OpenAI2023a,
-    author={{OpenAI}},
-    title={GPT-4 Technical Report},
-    year={2023},
-    note={Guess for the organization-year style cited source},
+  author = {OpenAI},
+  title = {GPT-4 Technical Report},
+  year = {2023},
+  note = {Available at: \url{https://openai.com/research/gpt-4}}
 }
 
 @inproceedings{Wu2023,
-    author={J. Wu et al.},
-    title={HaluEval: A Universal Evaluation Benchmark for Hallucination in Large Language Models},
-    booktitle={Proc. of the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
-    year={2023},
-    note={Guess for the HaluEval source},
+  author = {J. Wu et al.},
+  title = {HaluEval: A Universal Evaluation Benchmark for Hallucination in Large Language Models},
+  booktitle = {Proc. of the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  year = {2023},
+  note = {Available at: \url{https://arxiv.org/abs/2305.04552}}
 }
+
 @misc{Taori2023Hallucination,
-  author = {R. Taori and I. Gulrajani and T. Zhang and Y. Dubois and X. Li and C. Guestrin and P. Liang and T. Hashimoto},
+  author = {R. Taori et al.},
   title = {Understanding Hallucinations in GPT Models},
   year = {2023},
-  note = {Online. Available: <URL>}
+  note = {Available at: \url{https://arxiv.org/abs/2305.04552}}
 }
+@misc{gpt5hALLUC,
+  author = {OpenAI gpt 5 model interaction},
+  title = {gpt5 Hallucination - https://imgur.com/NYKDNOQ},
+  year = {2025},
+  note = {Online. Available: https://imgur.com/NYKDNOQ}
+}
+
