references fixed sanderson

--- a/typst-doc/refs.bib
+++ b/typst-doc/refs.bib
@@ -26,13 +26,6 @@
     note={Web of Science WOS:001436441200008; Available: https://www.ijimai.org/journal/sites/default/files/2025-02/ijimai9_2_7.pdf},
 }
 
-@misc{Sanderson2024Impact,
-    author={A. Sanderson et al.},
-    title={Evaluating the Impact of Hallucinations on User Trust and Reliance on AI Systems},
-    year={2024},
-    note={Online. Available: https://www.diva-portal.org/smash/get/diva2:1870904/FULLTEXT01.pdf},
-}
-
 @misc{Understanding2024,
     author={{Understanding the Effects of Miscalibrated AI Confidence on Human Trust}},
     title={Understanding the Effects of Miscalibrated AI Confidence on Human Trust},
@@ -60,6 +53,18 @@
     title={Fake it till you make it? AI hallucinations and ethical responsibility in medicine},
     year={2025},
     note={PubMed Central. Available: https://pmc.ncbi.nlm.nih.gov/articles/PMC12237199/. Accessed: Oct. 6, 2025.},
+}
+@article{Bucinca2021,
+  author = {Zana Bu\u{c}inca and Maja B. Malaya and Krzysztof Z. Gajos},
+  title = {To Trust or to Think: Cognitive Forcing Functions Can Reduce Overreliance on AI in AI-assisted Decision-making},
+  journal = {Proceedings of the ACM on Human-Computer Interaction},
+  year = {2021},
+  volume = {5},
+  number = {CSCW1},
+  pages = {188:1--188:21},
+  doi = {10.1145/3449287},
+  url = {https://dl.acm.org/doi/10.1145/3449287},
+  arxiv = {https://arxiv.org/abs/2102.09692}
 }
 
 @misc{Feather2025,
@@ -315,7 +320,7 @@
   note = {Available at: \url{https://arxiv.org/abs/2305.04552}}
 }
 @misc{gpt5hALLUC,
-  author = {OpenAI gpt 5 model interaction},
+  author = {(OpenAI) gpt-5 model},
   title = {gpt5 Hallucination - https://imgur.com/NYKDNOQ},
   year = {2025},
   note = {Online. Available: https://imgur.com/NYKDNOQ}
