--- a/typst-doc/refs.bib
+++ b/typst-doc/refs.bib
@@ -17,7 +17,7 @@
 
 
 @article{Hallucination2025,
-    author={{AI Hallucinations? What About Human Hallucination?! Addressing Human Imperfection Is Needed for an Ethical AI}},
+    author={{Tlili and Burgos}},
     title={AI Hallucinations? What About Human Hallucination?! Addressing Human Imperfection Is Needed for an Ethical AI},
     journal={International Journal of Interactive Multimedia and Artificial Intelligence (IJIMAI)},
     year={2025},
@@ -28,30 +28,30 @@
 }
 
 @misc{Understanding2024,
-    author={{Understanding the Effects of Miscalibrated AI Confidence on Human Trust}},
+    author={{Li et al.}},
     title={Understanding the Effects of Miscalibrated AI Confidence on Human Trust},
     year={2024},
     note={arXiv:2402.07632. Available: https://arxiv.org/html/2402.07632v4},
 }
 
-@inproceedings{Wang2023,
-    author={D. Wang et al.},
-    title={Measuring and Understanding Trust Calibrations for Explainable AI},
+@inproceedings{Wis2023,
+    author={Wischnewski et al.},
+    title={Measuring and Understanding Trust Calibrations for Automated Systems: A Survey of the State-Of-The-Art and Future Directions},
     booktitle={Proc. ACM Conf.},
     year={2023},
     note={Available: https://dl.acm.org/doi/fullHtml/10.1145/3544548.3581197},
 }
 
-@misc{Lai2020,
+@misc{Liao2020,
     author={V. Lai et al.},
-    title={Effect of Confidence and Explanation on Accuracy and Trust Calibration in Human-AI Collaboration},
+    title={Effect of Confidence and Explanation on Accuracy and Trust Calibration in AI-Assisted Decision Making},
     year={2020},
     note={arXiv:2001.02114. Available: https://arxiv.org/abs/2001.02114},
 }
 
 @misc{FakeIt2025,
-    author={{Fake it till you make it? AI hallucinations and ethical responsibility in medicine}},
-    title={Fake it till you make it? AI hallucinations and ethical responsibility in medicine},
+    author={Ashwin et al.},
+    title={Fake it till you make it? AI hallucinations and ethical dilemmas in Anesthesia research and practice},
     year={2025},
     note={PubMed Central. Available: https://pmc.ncbi.nlm.nih.gov/articles/PMC12237199/. Accessed: Oct. 6, 2025.},
 }
@@ -68,18 +68,17 @@
   arxiv = {https://arxiv.org/abs/2102.09692}
 }
 
- 
 
 @article{Transparency2024,
-    author={{Transparency and accountability in AI systems}},
-    title={Transparency and accountability in AI systems},
+    author={Cheong},
+    title={Transparency and accountability in AI systems: safeguarding wellbeing in the age of algorithmic decision-making},
     journal={Frontiers in Human Dynamics},
     year={2024},
     note={Available: https://www.frontiersin.org/journals/human-dynamics/articles/10.3389/fhumd.2024.1421273/full. Accessed: Oct. 6, 2025.},
 }
 
 @misc{Legal500_2025,
-    author={{AI Hallucinations: When Creation Comes at a Cost, Who Pays?}},
+    author={Jain et al.},
     title={AI Hallucinations: When Creation Comes at a Cost, Who Pays?},
     year={2025},
     note={The Legal 500. Available: https://www.legal500.com/developments/thought-leadership/ai-hallucinations-when-creation-comes-at-a-cost-who-pays/. Accessed: Oct. 6, 2025.},
@@ -136,10 +135,8 @@
     title={"Help Me Help the AI": Understanding How Explainability Can Support Human-AI Interaction},
     booktitle={CHI '23 (Best Paper HM)},
     year={2023},
-    note={Available: https://sunniesuhyoung.github.io/XAI_Trust/},
+    note={Available: https://dl.acm.org/doi/10.1145/3544548.3581001},
 }
-
- 
 
 
 
@@ -154,7 +151,7 @@
 
 @article{Ji2023,
     author={Z. Ji et al.},
-    title={Survey of Hallucination in Large Language Models},
+    title={A Survey on Hallucination in Large Language Models: Principles, Taxonomy, Challenges, and Open Questions},
     journal={ACM Computing Surveys},
     year={2023},
       note = {Available at: \url{https://dl.acm.org/doi/10.1145/3703155}}
@@ -162,15 +159,14 @@
 
 @inproceedings{Maynez2020,
     author={J. Maynez et al.},
-    title={Faithful to the Original: Factuality and Attribution in Abstractive Summarization},
-    booktitle={Proc. of the 58th Annual Meeting of the Association for Computational Linguistics (ACL)},
+    title={On Faithfulness and Factuality in Abstractive Summarization},
     year={2020},
       note = {Available at: \url{https://aclanthology.org/2020.acl-main.173/}}
 }
 
 @article{Kazemi2023,
     author={S. M. Kazemi et al.},
-    title={Hallucinations in Large Language Models: A Survey},
+    title={A Survey on Hallucination in Large Language Models: Principles, Taxonomy, Challenges, and Open Questions},
     journal={arXiv preprint},
     year={2023},
       note = {Available at: \url{https://arxiv.org/abs/2311.05232}}
@@ -185,15 +181,15 @@
   }
 
 @article{Zuccon2023,
-    author={G. Zuccon},
-    title={ChatGPT and Scholarly Hallucinations},
-    journal={Nature},
+    author={G. Zuccon et al.},
+    title={ChatGPT Hallucinates when Attributing Answers},
+    journal={arxiv},
     year={2023},
-  note = {Available at: \url{https://www.nature.com/articles/s41599-024-03811-x}}}
+  note = {Available at: \url{https://arxiv.org/abs/2309.09401}}}
 
 @article{HoangEtAl,
     author={Q. Hoang et al.},
-    title={A Classification of Hallucinations in Large Language Models},
+    title={A Survey on Hallucination in Large Language Models: Principles, Taxonomy, Challenges, and Open Questions},
     journal={ArXiv Preprint},
     year={2024},
   note = {Available at: \url{https://arxiv.org/abs/2311.05232}}}
@@ -206,7 +202,7 @@
   note = {Available at: \url{https://arxiv.org/abs/2005.00661}}}
 @article{Zhou2022,
   author = {S. Zhou et al.},
-  title = {Controllable Text Generation with Language Models},
+  title = {Least-to-Most Prompting Enables Complex Reasoning in Large Language Models},
   journal = {ArXiv Preprint},
   year = {2022},
   note = {Available at: \url{https://arxiv.org/abs/2205.10625}}
@@ -221,20 +217,13 @@
 }
 
 @article{Bang2023,
-  author = {Y. Bang and E. Madotto},
-  title = {A Categorization of Hallucination Types in LLMs},
+  author = {Ji et al.},
+  title = {Survey of Hallucination in Natural Language Generation},
   journal = {ArXiv Preprint},
   year = {2023},
-  note = {Available at: \url{https://arxiv.org/abs/2305.04552}}
+  note = {Available at: \url{https://arxiv.org/abs/2202.03629}}
 }
 
-@article{Chen2023,
-  author = {T. Chen et al.},
-  title = {Survey on Hallucination in Large Language Models},
-  journal = {ArXiv Preprint},
-  year = {2023},
-  note = {Available at: \url{https://arxiv.org/abs/2305.04552}}
-}
 
 @misc{OpenAI2023a,
   author = {OpenAI},
@@ -244,11 +233,11 @@
 }
 
 @inproceedings{Wu2023,
-  author = {J. Wu et al.},
+  author = {HaluEval: A Large-Scale Hallucination Evaluation Benchmark for Large Language Models.},
   title = {HaluEval: A Universal Evaluation Benchmark for Hallucination in Large Language Models},
-  booktitle = {Proc. of the Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  
   year = {2023},
-  note = {Available at: \url{https://arxiv.org/abs/2305.04552}}
+  note = {Available at: \url{https://aclanthology.org/2023.emnlp-main.397/}}
 }
 
 @misc{gpt5hALLUC,
